apps/argo-cd/templetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-umer.786999.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-argo-cd-argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd-umer.786999.xyz
    secretName: argocd-server-tls # as expected by argocd-server
